--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,7 +20,6 @@ To prevent user selecting inside the drag source
 
 #eq_list {
   width: 300px;
-  height: 100px;
   border: 1px solid #000; }
 
 #canvas_top .item {
@@ -33,5 +32,15 @@ To prevent user selecting inside the drag source
 .item img {
   width: 50px;
   filter: drop-shadow(1px 1px 1px #000); }
+
+#devices_info {
+  position: fixed;
+  background-color: #fff;
+  width: 200px;
+  text-align: center; }
+
+#connection_area img {
+  width: 50px;
+  height: 50px; }
 
 /*# sourceMappingURL=style.css.map */
