--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,7 +23,6 @@ To prevent user selecting inside the drag source
 
 #eq_list {
   width: 300px;
-  height: 100px;
   border: 1px solid #000;
 }
 
@@ -39,4 +38,13 @@ To prevent user selecting inside the drag source
 .item img {
   width: 50px;
   filter: drop-shadow(1px 1px 1px #000);
+}
+#devices_info{
+  position: fixed;
+  background-color: #fff;
+  width: 200px;
+  text-align: center;
+}
+#connection_area img{
+  width: 50px;height: 50px;
 }
